--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <title>Webpack Starter Kit</title>
- 
-  </head>
 
-  <body>
-    
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <title>Countries</title>
+
+</head>
+
+<body>
+  <div class="container">
+    <input type="text" class="input" data-value="input">
+
+    <article class="countries"></article>
+  </div>
+</body>
+
 </html>
